# project-euler

./: .gitignore  .prettierrc  Makefile  README.md  package.json
.github/workflows/: node.js.yml
javascript/: p001.js  p002.js  p003.js  p004.js  p005.js  p006.js  p007.js  p008.js  p009.js  p011.js  utils.js
ocaml/: bsconfig.json
ocaml/src/: p001.ml
rescript/: bsconfig.json
rescript/src/: p001.res  p002.res  p005.res
rust/: Cargo.toml
rust/src/: index.rs  p001.rs
test/: index.js  solutions.js  utils.js
